work/manifests/supernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supernetes
---
# Namespace for untracked Supernetes workloads
apiVersion: v1
kind: Namespace
metadata:
  name: supernetes-workload
