work/manifests/supernetes/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: supernetes
  namespace: supernetes
spec:
  gatewayClassName: cilium
  listeners:
    - name: grpc
      port: 443
      protocol: TLS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Passthrough
